[lib]
crate-type = ["cdylib" , "rlib"]

[package]
name = "wgpu-fdm"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"]}
cfg-if = "1"
encase = "0.9.0"
env_logger = "0.11.3"
flume = "0.11.0"
log = "0.4.21"
wgpu = "0.20.1"
winit = "0.30.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.20.1", features = ["webgl"] }

